// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  Hello Button
</button>
`;

exports[`Storyshots ListFooter default 1`] = `
Array [
  <div
    className="ListFooter-wrapper-347"
  >
    <div
      className="ListFooter-content-348"
    >
      <button
        className="MuiButtonBase-root-379 MuiButtonBase-disabled-380 MuiButton-root-353 MuiButton-text-355 MuiButton-flat-358 MuiButton-disabled-373"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-354"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-382"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
            />
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
          </svg>
          Previous page
        </span>
      </button>
      <div
        className="MuiTabs-root-393"
      >
        <div
          className="MuiTabs-flexContainer-394"
        >
          <div
            className="MuiTabs-scroller-396 MuiTabs-fixed-397"
            onScroll={[Function]}
            role="tablist"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <div
              className="MuiTabs-flexContainer-394"
            >
              <button
                aria-selected={true}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404 MuiTab-selected-407 Pagination-selected-391"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      1
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      2
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
            </div>
            <span
              className="MuiPrivateTabIndicator-root-414 MuiPrivateTabIndicator-colorPrimary-415 MuiTabs-indicator-401"
              style={
                Object {
                  "left": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </div>
      </div>
      <button
        className="MuiButtonBase-root-379 MuiButton-root-353 MuiButton-text-355 MuiButton-flat-358"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-354"
        >
          Next page
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-382"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
            />
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-417"
        />
      </button>
    </div>
  </div>,
  <div
    className="ListFooter-wrapper-347"
  >
    <div
      className="ListFooter-content-348"
    >
      <button
        className="MuiButtonBase-root-379 MuiButton-root-353 MuiButton-text-355 MuiButton-flat-358"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-354"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-382"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
            />
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
          </svg>
          Previous page
        </span>
        <span
          className="MuiTouchRipple-root-417"
        />
      </button>
      <div
        className="MuiTabs-root-393"
      >
        <div
          className="MuiTabs-flexContainer-394"
        >
          <div
            className="MuiTabs-scroller-396 MuiTabs-fixed-397"
            onScroll={[Function]}
            role="tablist"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <div
              className="MuiTabs-flexContainer-394"
            >
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      1
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      2
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={true}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404 MuiTab-selected-407 Pagination-selected-391"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      3
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      4
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      5
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      6
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      7
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
            </div>
            <span
              className="MuiPrivateTabIndicator-root-414 MuiPrivateTabIndicator-colorPrimary-415 MuiTabs-indicator-401"
              style={
                Object {
                  "left": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </div>
      </div>
      <button
        className="MuiButtonBase-root-379 MuiButton-root-353 MuiButton-text-355 MuiButton-flat-358"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-354"
        >
          Next page
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-382"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
            />
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-417"
        />
      </button>
    </div>
  </div>,
  <div
    className="ListFooter-wrapper-347"
  >
    <div
      className="ListFooter-content-348"
    >
      <button
        className="MuiButtonBase-root-379 MuiButton-root-353 MuiButton-text-355 MuiButton-flat-358"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-354"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-382"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
            />
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
          </svg>
          Previous page
        </span>
        <span
          className="MuiTouchRipple-root-417"
        />
      </button>
      <div
        className="MuiTabs-root-393"
      >
        <div
          className="MuiTabs-flexContainer-394"
        >
          <div
            className="MuiTabs-scroller-396 MuiTabs-fixed-397"
            onScroll={[Function]}
            role="tablist"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <div
              className="MuiTabs-flexContainer-394"
            >
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      1
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      2
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={true}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404 MuiTab-selected-407 Pagination-selected-391"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      3
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      4
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      5
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      6
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      7
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      8
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      9
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      ...
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
            </div>
            <span
              className="MuiPrivateTabIndicator-root-414 MuiPrivateTabIndicator-colorPrimary-415 MuiTabs-indicator-401"
              style={
                Object {
                  "left": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </div>
      </div>
      <button
        className="MuiButtonBase-root-379 MuiButton-root-353 MuiButton-text-355 MuiButton-flat-358"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-354"
        >
          Next page
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-382"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
            />
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-417"
        />
      </button>
    </div>
  </div>,
  <div
    className="ListFooter-wrapper-347"
  >
    <div
      className="ListFooter-content-348"
    >
      <button
        className="MuiButtonBase-root-379 MuiButton-root-353 MuiButton-text-355 MuiButton-flat-358"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-354"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-382"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
            />
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
          </svg>
          Previous page
        </span>
        <span
          className="MuiTouchRipple-root-417"
        />
      </button>
      <div
        className="MuiTabs-root-393"
      >
        <div
          className="MuiTabs-flexContainer-394"
        >
          <div
            className="MuiTabs-scroller-396 MuiTabs-fixed-397"
            onScroll={[Function]}
            role="tablist"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <div
              className="MuiTabs-flexContainer-394"
            >
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      9
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      10
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      11
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      12
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={true}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404 MuiTab-selected-407 Pagination-selected-391"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      13
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      14
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      15
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      16
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      17
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
              <button
                aria-selected={false}
                className="MuiButtonBase-root-379 MuiTab-root-402 Pagination-root-392 MuiTab-textColorInherit-404"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiTab-wrapper-410"
                >
                  <span
                    className="MuiTab-labelContainer-411"
                  >
                    <span
                      className="MuiTab-label-412"
                    >
                      ...
                    </span>
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-417"
                />
              </button>
            </div>
            <span
              className="MuiPrivateTabIndicator-root-414 MuiPrivateTabIndicator-colorPrimary-415 MuiTabs-indicator-401"
              style={
                Object {
                  "left": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </div>
      </div>
      <button
        className="MuiButtonBase-root-379 MuiButton-root-353 MuiButton-text-355 MuiButton-flat-358"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-354"
        >
          Next page
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-382"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
            />
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-417"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots ListHeader default 1`] = `
<div
  className="ListHeader-wrapper-254"
>
  <div
    className="ListHeader-rightWrapper-255"
  >
    <div
      className="MuiInputBase-root-276 MuiInput-root-263"
      onClick={[Function]}
    >
      <div
        className="MuiSelect-root-256"
      >
        <div
          aria-haspopup="true"
          aria-pressed="false"
          className="MuiSelect-select-257 MuiSelect-selectMenu-260 MuiSelect-outlined-259 MuiInputBase-input-286 MuiInput-input-271"
          id="select-8 per page"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          8 per page
        </div>
        <input
          id="items-per-page"
          name="8 per page"
          type="hidden"
          value={8}
        />
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-293 MuiSelect-icon-262"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
  <h2
    className="MuiTypography-root-306 MuiTypography-h5-322"
  >
    List Header
  </h2>
  <p
    className="MuiTypography-root-306 MuiTypography-body1-315 MuiTypography-colorTextSecondary-339"
  >
    102456783 products
  </p>
  <hr
    className="MuiDivider-root-342"
  />
</div>
`;

exports[`Storyshots ProductCard default 1`] = `
Array [
  <div
    className="MuiPaper-root-8 MuiPaper-elevation1-11 MuiPaper-rounded-9 MuiCard-root-7 ProductCard-card-6"
  >
    <div
      className="MuiCardMedia-root-35 ProductCard-media-1"
      style={
        Object {
          "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
        }
      }
      title="Pilot product"
    />
    <hr
      className="MuiDivider-root-37"
    />
    <div
      className="MuiCardContent-root-42 ProductCard-content-5"
    >
      <h3
        className="MuiTypography-root-43 MuiTypography-h6-60 ProductCard-title-2"
      >
        Pilot product
      </h3>
      <p
        className="MuiTypography-root-43 MuiTypography-subtitle2-62 ProductCard-desc-3"
      >
        A pilot product for test very long long long long long long long long long long long long long description
      </p>
      <p
        className="MuiTypography-root-43 MuiTypography-h6-60 ProductCard-price-4"
      >
        $16.99
      </p>
    </div>
  </div>,
  <div>
    .
  </div>,
  <div
    className="MuiPaper-root-8 MuiPaper-elevation1-11 MuiPaper-rounded-9 MuiCard-root-7 ProductCard-card-6"
  >
    <div
      className="MuiCardMedia-root-35 ProductCard-media-1"
      style={
        Object {
          "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
        }
      }
      title="Untitled Item"
    />
    <hr
      className="MuiDivider-root-37"
    />
    <div
      className="MuiCardContent-root-42 ProductCard-content-5"
    >
      <h3
        className="MuiTypography-root-43 MuiTypography-h6-60 ProductCard-title-2"
      >
        Untitled Item
      </h3>
      <p
        className="MuiTypography-root-43 MuiTypography-subtitle2-62 ProductCard-desc-3"
      >
        single line
      </p>
      <p
        className="MuiTypography-root-43 MuiTypography-h6-60 ProductCard-price-4"
      >
        $0
      </p>
    </div>
  </div>,
  <div>
    .
  </div>,
  <div
    className="MuiPaper-root-8 MuiPaper-elevation1-11 MuiPaper-rounded-9 MuiCard-root-7 ProductCard-card-6"
  >
    <div
      className="MuiCardMedia-root-35 ProductCard-media-1"
      style={
        Object {
          "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
        }
      }
      title="Untitled Item"
    />
    <hr
      className="MuiDivider-root-37"
    />
    <div
      className="MuiCardContent-root-42 ProductCard-content-5"
    >
      <h3
        className="MuiTypography-root-43 MuiTypography-h6-60 ProductCard-title-2"
      >
        Untitled Item
      </h3>
      <p
        className="MuiTypography-root-43 MuiTypography-subtitle2-62 ProductCard-desc-3"
      >
        
      </p>
      <p
        className="MuiTypography-root-43 MuiTypography-h6-60 ProductCard-price-4"
      >
        $0
      </p>
    </div>
  </div>,
]
`;

exports[`Storyshots ProductGrid default 1`] = `
<div
  className="MuiGrid-container-79 MuiGrid-spacing-xs-16-102"
>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 0"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 0
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 0
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $0
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 1"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 1
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 1
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $1
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 2"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 2
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 2
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $2
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 3"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 3
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 3
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $3
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 4"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 4
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 4
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $4
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 5"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 5
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 5
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $5
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 6"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 6
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 6
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $6
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 7"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 7
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 7
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $7
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 8"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 8
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 8
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $8
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 9"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 9
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 9
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $9
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 10"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 10
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 10
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $10
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 11"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 11
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 11
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $11
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 12"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 12
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 12
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $12
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 13"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 13
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 13
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $13
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 14"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 14
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 14
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $14
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 15"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 15
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 15
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $15
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 16"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 16
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 16
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $16
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 17"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 17
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 17
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $17
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 18"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 18
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 18
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $18
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 19"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 19
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 19
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $19
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 20"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 20
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 20
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $20
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 21"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 21
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 21
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $21
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 22"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 22
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 22
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $22
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 23"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 23
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 23
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $23
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 24"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 24
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 24
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $24
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 25"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 25
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 25
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $25
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 26"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 26
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 26
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $26
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-80 MuiGrid-grid-xs-6-113 MuiGrid-grid-sm-4-125 MuiGrid-grid-md-3-138 MuiGrid-grid-lg-2-151"
  >
    <div
      className="MuiPaper-root-183 MuiPaper-elevation1-186 MuiPaper-rounded-184 MuiCard-root-182 ProductCard-card-181"
    >
      <div
        className="MuiCardMedia-root-210 ProductCard-media-176"
        style={
          Object {
            "backgroundImage": "url(\\"https://imgplaceholder.com/640x360\\")",
          }
        }
        title="title 27"
      />
      <hr
        className="MuiDivider-root-212"
      />
      <div
        className="MuiCardContent-root-217 ProductCard-content-180"
      >
        <h3
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-title-177"
        >
          title 27
        </h3>
        <p
          className="MuiTypography-root-218 MuiTypography-subtitle2-237 ProductCard-desc-178"
        >
          description 27
        </p>
        <p
          className="MuiTypography-root-218 MuiTypography-h6-235 ProductCard-price-179"
        >
          $27
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  style={
    Object {
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "margin": 15,
      "maxWidth": 600,
    }
  }
>
  <h1>
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottom": "1px solid #1474f3",
          "borderLeft": "none",
          "borderRight": "none",
          "borderTop": "none",
          "color": "#1474f3",
          "cursor": "pointer",
          "font": "inherit",
          "padding": 0,
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      type="button"
    >
      stories
    </button>
     for a component called
     
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
     stories located at
     
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    style={
      Object {
        "opacity": 0.5,
      }
    }
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
